<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_community"
        android:icon="@drawable/ic_community"
        android:title="@string/nav_community" />

    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/nav_explore" />

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard_grid"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/nav_progress"
        android:icon="@drawable/ic_timer"
        android:title="@string/nav_progress" />

    <item
        android:id="@+id/nav_premium"
        android:icon="@drawable/ic_heart"
        android:title="@string/nav_premium" />
</menu>